// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text No Wrap 1`] = `
<span
  class="Text-text-0 Text-noWrap-0"
>
  Lorem Ipsum dolor sit amed
</span>
`;

exports[`Text Render Basic Text 1`] = `
<span
  class="Text-text-0"
>
  FioriText
</span>
`;

exports[`Text Render Whitespace 1`] = `
<span
  class="Text-text-0 Text-renderWhitespace-0"
>
  Lorem Ipsum dolor sit amed
</span>
`;
